--- a/src/main/webapp/pages/adddepartment.html
+++ b/src/main/webapp/pages/adddepartment.html
@@ -26,7 +26,7 @@ body {
 <script type="text/javascript" src="../js/jquery-1.7.2.js"></script>
 <script type="text/javascript" src="../js/bootstrap.js"></script>
 <script type="text/javascript" src="../js/bootbox.js"></script>
-<script type="text/javascript" src="../js/departmentlist.js"></script>
+<script type="text/javascript" src="../js/adddeparrtment.js"></script>
 <script type="text/javascript" src="../js/jquery.form.js"></script>
 <script type="text/javascript" src="../js/loginheader.js"></script>
 <body>
@@ -40,7 +40,8 @@ body {
 				</a> <a class="brand" href="#">企业员工管理系统</a>
 				<div class="nav-collapse collapse">
 					<p class="navbar-text pull-right">
-						<a href="#" class="navbar-link" style="margin-right: 20px" id="loginUsername"></a><a href="../LoginOutServlet" id="loginout">login out</a>
+						<a href="#" class="navbar-link" style="margin-right: 20px"
+							id="loginUsername"></a><a href="../LoginOutServlet" id="loginout">login out</a>
 					</p>
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
@@ -58,62 +59,31 @@ body {
 				<div class="well sidebar-nav">
 					<ul class="nav nav-list">
 						<li class="nav-header">员工管理</li>
-						<li><a
-							href="staff.html">员工名单</a></li>
-						<li><a
-							href="addstaff.html">添加员工</a></li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
+						<li><a href="staff.html">员工名单</a></li>
+						<li><a href="addstaff.html">添加员工</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
 						<li class="nav-header">部门管理</li>
-						<li class="active"><a
-							href="">部门名单</a></li>
-						<li><a href="adddepartment.html">添加部门</a></li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
+						<li><a href="department.html">部门名单</a></li>
+						<li class="active"><a href="adddepartment.html">添加部门</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
 						<li class="nav-header">Sidebar</li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
-						<li><a
-							href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
 					</ul>
 				</div>
 				<!--/.well -->
 			</div>
 			<!--/span-->
 			<div class="span9">
-				<table class="table table-striped table-bordered table-condensed">
-					<thead>
-						<tr>
-							<th>名称</th><th>介绍</th><th>操作</th>
-						</tr>
-					</thead>
-					<tbody id="info">
-
-					</tbody>
-				</table>
-			</div>
-			<div id="modal" class="modal hide fade" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-hidden="true">×</button>
-					<h3 id="myModalLabel">修改员工信息</h3>
-				</div>
-				<div class="modal-body">
-					<div>
+				<div>
+					<h3>添加部门</h3>
 					<form class="form-horizontal" action="../rest/department" method="post"
 						id="departmentform">
-						<input type="hidden" id="Did" name="id">
 						<div class="control-group">
 							<label class="control-label" for="departmentName">部门名称</label>
 							<div class="controls">
@@ -128,12 +98,13 @@ body {
 								<span class="help-inline"></span>
 							</div>
 						</div>
+						<div class="control-group">
+							<div class="controls">
+								<button type="submit" class="btn btn-primary "
+									id="departmentsubmit">提交</button>
+							</div>
+						</div>
 					</form>
-				</div>
-				</div>
-				<div class="modal-footer">
-					<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-					<button class="btn btn-primary" id="departmentsubmit">Save changes</button>
 				</div>
 			</div>
 			<!--/span-->
