--- a/src/main/webapp/pages/content.html
+++ b/src/main/webapp/pages/content.html
@@ -62,8 +62,7 @@ body {
 						<li class="nav-header">部门管理</li>
 						<li><a
 							href="department.html">部门名单</a></li>
-						<li><a
-							href="#">Link</a></li>
+						<li><a href="adddepartment.html">添加部门</a></li>
 						<li><a
 							href="#">Link</a></li>
 						<li><a
